start over link looks like a link now

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
     font-family: "Lucida Console", Monaco, monospace;
 }
+a {
+    text-decoration: underline;
+    cursor: pointer;
+}
 body {
     border-color: black;
 }
