--- a/styles.css
+++ b/styles.css
@@ -142,6 +142,12 @@ body {
     top: 0;
     left: 0;
 }
+.credits {
+    font-size: 30px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
 .level-13, .level-14 {
     background: black;
     color: white;
